--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -22,6 +22,12 @@
     "languageTitle": "Мова"
   },
   "home": {
+    "badge": "Програмне забезпечення для моніторингу енергоспоживання",
+    "titleA": "Відстежуйте кожен",
+    "unit": "кВт·год",
+    "titleB": "і запобігайте втратам енергії в режимі реального часу.",
+    "cta1": "Замовити демонстрацію",
+
     "heroTitle": "Моніторинг енергії, який відчувається простим",
     "heroText": "TypeScript + SCSS + i18n (uk/en/es). Швидкий старт. Чисті дашборди.",
     "ctaPrimary": "Переглянути сервіси",
@@ -35,7 +41,8 @@
     "t2": "швидкі інсайти",
     "k3": "Звіти",
     "t3": "готові для поширення",
-    "note": "Порада: мову можна змінити будь-коли — контент оновиться миттєво."
+    "note": "Порада: мову можна змінити будь-коли — контент оновиться миттєво.",
+    "lead": "Отримайте повну інформацію про енергоспоживання вашого підприємства. Виявляйте неефективність, знижуйте пікові навантаження та відстежуйте роботу кожної панелі, зони й обладнання за допомогою панелі моніторингу FusioEnergy в режимі реального часу."
   },
   "about": {
     "title": "Про нас",
